resolve several test case issues